# hamsterdb

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  TODO-GER.txt  bootstrap.sh  config.h.in  configure.in  hamsterdb.spec  update_version.sh  wsclean_run.sh
contrib/wince/: 3rdparty_aes.vcproj  3rdparty_zlib.vcproj  dll.vcproj  hamsterdb.sln  lib.vcproj  sample_db1.vcproj  sample_env1.vcproj  sample_env2.vcproj
documentation/: Doxyfile  Doxyfile.bfc  Doxyfile.int  appendix_gfdl.doc  appendix_gpl2.doc  appendix_gpl3.doc  architecture.doc  binary-search-trees.ppt  doxygen.css  extras.doc  faq.doc  features.doc  footer.html  got_geek.doc  hamsterdb.css  header.html  history.doc  index.doc  licensing.doc  platforms.doc  samples.doc  starting.doc  trouble.doc  tuning.doc  tutorial.doc  tweak_html.bat  tweak_html.bat.awk
documentation/BFC logo design/: bfc.ai
dotnet/hamsterdb-dotnet/: Database.cs  Environment.cs  NativeMethods.cs
dotnet/unittests/: CursorTest.cs  DatabaseExceptionTest.cs  DatabaseTest.cs  EnvironmentTest.cs  TransactionTest.cs
include/ham/: Makefile.am  hamsterdb.h  hamsterdb.hpp  hamsterdb_int.h  hamsterdb_srv.h  hamsterdb_stats.h  packstart.h  packstop.h  types.h
java/java/: Makefile.am
java/java/de/crupp/hamsterdb/: CompareCallback.java  Const.java  Cursor.java  Database.java  DatabaseException.java  DuplicateCompareCallback.java  Environment.java  ErrorHandler.java  Parameter.java  PrefixCompareCallback.java  Transaction.java
java/src/: Makefile.am
java/unittests/: CursorTest.java  DatabaseTest.java  EnvironmentTest.java  Makefile.am  win32.bat
samples/: Makefile.am  calcmodel.hpp  client1.c  datafeedsim.hpp  db1.c  db2.c  db3.c  db4.c  db5.c  db6.cpp  db7.c  env1.c  env2.c  env3.cpp  env4.cpp  hamsterdb_ex.hpp  mcreporter.hpp  montecarlo.hpp  randomgen.hpp  server1.c
src/: Makefile.am  backend.h  blob.c  blob.cc  blob.h  btree.c  btree.cc  btree.h  btree_check.c  btree_check.cc  btree_classic.h  btree_cursor.c  btree_cursor.cc  btree_cursor.h  btree_enum.c  btree_enum.cc  btree_erase.c  btree_erase.cc  btree_find.c  btree_find.cc  btree_insert.c  btree_insert.cc  btree_key.cc  btree_key.h  btree_stats.cc  btree_stats.h  cache.c  cache.cc  cache.h  changeset.cc  changeset.h  config.h  cuckoo_hash.c  cuckoo_hash.h  cuckoo_hash_cursor.h  cursor.cc  cursor.h  db.c  db.cc  db.h  (+66 more)
src/devices/: cachedev.c  compression.c  crypter.c  db_partitioner.c  event_sender.c  field_partitioner.c  file_per_rid.c  flashmem.c  flatfile.c  graph_mgr.c  https.c  key_partitioner.c  logger_swapper.c  mallocmem.c  rid_partitioner.c  stream_compression.c
src/protocol/: Makefile.am  messages.proto  protocol.cc  protocol.h
src/server/: Makefile.am  hamserver.c  hamserver.cc
tools/: Makefile.am  config.c  getopts.c  getopts.h  ham_dump.c  ham_dump.cc  ham_info.c  ham_info.cc  ham_log.cpp  ham_recover.cc  hamzilla.c
unittests/: Makefile.am  api110.cpp  bfc-sample.cpp  bfc-signal.c  bfc-testsuite.cpp  bfc-testsuite.hpp  bfc.doc  blob.cpp  bt_cursor.cpp  btree_cursor.cpp  btree_erase.cpp  btree_insert.cpp  btree_key.cpp  cache.cpp  changeset.cpp  check.cpp  cppapi.cpp  cursor.cpp  db.cpp  device.cpp  device_graph.cpp  duplicates.cpp  empty_sample.cpp  endian.cpp  env.cpp  error.cpp  extkeys.cpp  filter.cpp  fraction.cpp  freelist.cpp  hamster_fixture.hpp  hamsterdb.cpp  journal.cpp  keys.cpp  log.cpp  main.cpp  mem.cpp  memtracker.cpp  memtracker.h  misc.cpp  (+10 more)
win32/: 3rdparty_aes.vcproj  dll.vcproj  ham_info.vcproj  lib.vcproj  protocol.vcproj  sample_db1.vcproj  sample_db4.vcproj  sample_db5.vcproj  sample_db6.vcproj  sample_env1.vcproj  sample_env2.vcproj  sample_env3.vcproj  server_dll.vcproj  server_lib.vcproj
win32/msvc2005/: 3rdparty_aes.vcproj  3rdparty_json.vcproj  3rdparty_mongoose.vcproj  3rdparty_zlib.vcproj  bfc-sample.vcproj  dll.vcproj  ham_driver_graph.sln  ham_driver_graph.vcproj  ham_dump.vcproj  ham_info.vcproj  hamsterDB_dll.vcproj  hamsterDB_lib.vcproj  hamsterdb.sln  hamzilla.vcproj  lib.vcproj  protocol.vcproj  sample_db1.vcproj  sample_db2.vcproj  sample_db3.vcproj  sample_db4.vcproj  sample_db5.vcproj  sample_db6.vcproj  sample_db7.vcproj  sample_env1.vcproj  sample_env2.vcproj  sample_env3.vcproj  sample_env4.vcproj  server_dll.vcproj  server_lib.vcproj  unittests.vcproj
win32/msvc2008/: 3rdparty_aes.vcproj  3rdparty_json.vcproj  3rdparty_mongoose.vcproj  3rdparty_zlib.vcproj  README.TXT  bfc-sample.vcproj  dll.vcproj  ham_driver_graph.sln  ham_driver_graph.vcproj  ham_dump.vcproj  ham_info.vcproj  ham_service.vcproj  hamsterDB_dll.vcproj  hamsterDB_lib.vcproj  hamsterdb.sln  protocol.vcproj  sample_client1.vcproj  sample_db1.vcproj  sample_db2.vcproj  sample_db3.vcproj  sample_db4.vcproj  sample_db5.vcproj  sample_db6.vcproj  sample_db7.vcproj  sample_env1.vcproj  sample_env2.vcproj  sample_env3.vcproj  sample_env4.vcproj  sample_server1.vcproj  server_dll.vcproj  server_lib.vcproj  unittests.vcproj
win32/msvc2010/: 3rdparty_aes.vcxproj  3rdparty_json.vcxproj  3rdparty_mongoose.vcxproj  3rdparty_mongoose.vcxproj.filters  3rdparty_zlib.vcxproj  3rdparty_zlib.vcxproj.filters  bfc-sample.vcxproj  dll.vcxproj  ham_driver_graph.sln  ham_dump.vcxproj  ham_info.vcxproj  ham_recovery.vcxproj  ham_service.vcxproj  ham_service.vcxproj.filters  hamsterDB_dll.vcxproj  hamsterDB_dll.vcxproj.filters  hamsterDB_lib.vcxproj  hamsterDB_lib.vcxproj.filters  hamsterdb.sln  hamsterdb_dll_debug.def  lib.vcxproj  protocol.vcxproj  sample_db1.vcxproj  sample_db2.vcxproj  sample_db3.vcxproj  sample_db4.vcxproj  sample_db5.vcxproj  sample_db6.vcxproj  sample_db7.vcxproj  sample_env1.vcxproj  sample_env2.vcxproj  sample_env3.vcxproj  sample_env4.vcxproj  server_dll.vcxproj  server_lib.vcxproj  unittests.vcxproj  unittests.vcxproj.filters
